# EmbArBB

./: EmbArBB.cabal  EmbArBB.cabal-DONT_USE  Garb.hs  Garb2.hs  Garb3.hs  LICENSE  README.org  Test.hs  Test2.hs  Test3.hs  breaks.hs  index.html  params.json
Intel/: ArBB.hs
Intel/ArBB/: ArBBMonad.hs  Backend.hs  BackendExperiment.hs  BackendExperiment2.hs  Capture.hs  DAG.hs  Data.hs  Embeddable.hs  ExpToLExp.hs  Function.hs  GenArBB.hs  GenRecord.hs  IsScalar.hs  Language-old.hs  Language.hs  Literal.hs  MonadBackend.hs  MonadCapture.hs  MonadReify.hs  Op.hs  Reify.hs  ReifyableType.hs  Syntax.hs  TypeCheck.hs  Types.hs  Variable.hs  Vector.hs  WithArBB.hs
Intel/ArBB/Backend/: ArBB.hs  Scalar.hs  Vector.hs
Intel/ArBB/Backend/ArBB/: ArBBVector.hs  CodeGen.hs
Intel/ArBB/Data/: Boolean.hs  Int.hs
Intel/ArBB/Util/: Image.hs
Samples/: Makefile  addconst.hs  blur.hs  convolve.hs  dotprod.hs  histogram.hs  listrank.hs  matrix_mult.hs  matrix_vector.hs  run.sh  saxpy.hs  sgemm.hs  simplemap.hs  smvm.hs  sobel.hs  window.raw
Samples/Bench/: Makefile  blur.hs  blurpart.hs  dotprod.hs  matrix_mult.hs  runall.sh  runblurpart.sh  runmm.sh  runsob.sh  runsobfull.sh  sobel.hs  sobelfull.hs
Scripts/: run.sh  runall.sh
