Name:           EmbArBB
Version:        0.2.0.0

License:                BSD3
License-file:           LICENSE
Stability:              Beta
Maintainer:		Joel Svensson<svenssonjoel@yahoo.se>
Author:			Joel Svensson<svenssonjoel@yahoo.se>

Copyright:              Copyright (c) 2012 Joel Svensson
Synopsis:               Embedded language using the Haskell arbb-vm bindings.
HomePage:               https://github.com/svenssonjoel/EmbArbb
Description: 
   Embedded language for parallel programming targeting multicore processors 
   and their SSE,AVX units. Requires Intel ArBB (http://software.intel.com/en-us/articles/intel-array-building-blocks/) 
   and the Haskell arbb bindings.

Category: Language
Cabal-Version: >=1.8
Tested-With: GHC == 7.4.1

build-type: Simple

source-repository head
  type:     git
  location: git://github.com/svenssonjoel/EmbArBB.git

----------------------------------------------------------------------------------------------------
Library 
  build-depends: base 
               , mtl 
     --          , directory
               , containers
               , vector
               , arbb-vm >= 0.1.1.8



  exposed-modules: Intel.ArBB.Syntax
                 , Intel.ArBB.Variable
                 , Intel.ArBB.Literal
                 , Intel.ArBB.MonadCapture
                 , Intel.ArBB.BackendExperiment
                 , Intel.ArBB.GenRecord
                 , Intel.ArBB.ReifyableType
                 , Intel.ArBB.Function 		
                 , Intel.ArBB.DAG
                 , Intel.ArBB.TypeCheck
                 , Intel.ArBB.Vector
                 , Intel.ArBB.Language
                 , Intel.ArBB.Types
                 , Intel.ArBB.Data
                 , Intel.ArBB.Data.Int
                 , Intel.ArBB.IsScalar
                 , Intel.ArBB
                 , Intel.ArBB.Backend.GenArBB
                 , Intel.ArBB.Backend.ArBB		 


  GHC-Options: 

  include-dirs: /opt/intel/arbb/latest/include

  -- FIXME: How do we read an environment variable?
  if arch( x86_64 ) 
    extra-lib-dirs: /opt/intel/arbb/latest/lib/intel64
  else
    extra-lib-dirs: /opt/intel/arbb/latest/lib/ia32

  Includes: arbb_vmapi.h 
  Extra-libraries: arbb_dev, tbb
